# mcp-tutorial

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml
app/: main.py  mcp_server.py  weather_service.py
app/static/: app.js  index.html  styles.css
