[project]
name = "mcp-tutorial"
version = "0.1.0"
description = "A professional FastMCP weather server with a dashboard for tools, resources, and prompts."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "jinja2>=3.1.0",
]

[tool.uv]
package = false
